Fix alignment of twitter bird and text underflow on bullet points

--- a/css/custom.css
+++ b/css/custom.css
@@ -177,3 +177,9 @@
     clear: left;
   }
 }
+#rss-logo {
+  width: 20px;
+}
+.schedule-overview li {
+  padding-right: 38px;
+}
